tests/testcases/invalid/semantic/92_minus_assign_to_rvalue.ciel
// Error: compound assignment -= to rvalue
int main() {
    int a = 5;

    // Error: (a++) is rvalue
    (a++) -= 2;

    return 0;
}
